# send_mail

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  SendMail.desktop  index.html  search.json  sitemap.xml
.gemini/: GEMINI.md
.github/workflows/: cyclonedx.yml  deploy_gh-pages.yml  deploy_ghp.yml  release.yml
assets/css/: template.css
configure/: rz_config.hpp.in
include/: ConfigModel.hpp  MailController.hpp  SmtpService.hpp  rz_config.hpp
src/: ConfigModel.cpp  MailController.cpp  SmtpService.cpp  main.cpp
theme/: template.html
